Fixed icon type and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -364,6 +364,9 @@ a {
         display: flex;
         justify-content: space-evenly;
     }
+    .svg-inline--fa {
+        margin: 0 auto !important;
+    }
 }
 
 
